just a slight change to ensure instructions button isnt off screen

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   grid-template-columns: repeat(4, 1fr);
   justify-items: center;
   align-items: center;
-  margin: 25px;
+  margin: 15px 25px 15px 25px;
   padding: 15px 0px 15px 0px;
   background-color: #1d1d1d;
   border: solid #393939;
@@ -250,7 +250,7 @@ canvas {
 .keyboard {
   display: flex;
   flex-direction: column;
-  margin: 30px auto 20px;
+  margin: 20px auto 20px;
   width: 75%;
   padding-bottom: 15px;
   background-color: #393939;
